examples/test/testpolicy12453.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12453
  namespace: namespace126
spec:
  podSelector:
    matchLabels:
      key32: value3
      key15: value2
      key42: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value14
          key14: value46
      podSelector:
        matchLabels:
          key32: value49
          key36: value17
